# GuanYan

./: README.md  agconnect-services.json  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle
app/app/app/: agconnect-services .json  build.gradle  guanyan.jks
app/app/app/src/main/: AndroidManifest.xml
app/src/debug/res/values/: ic_launcher_background.xml
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: native.cpp
app/src/main/ncnn/: CMakeLists.txt  blazepose.cpp  blazeposencnn.cpp
app/src/main/ncnn/opencv-mobile-4.6.0-android/sdk/native/jni/: OpenCVConfig.cmake
app/src/main/ncnn/opencv-mobile-4.6.0-android/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake
app/src/main/ocr/: CMakeLists.txt
app/src/main/res/drawable/: divider.xml  guanyan.xml  horizontal_line.xml  ic_stop.xml  ic_video.xml  ok.xml  record.xml  right.xml  round_rec.xml  round_rec_default.xml  round_rec_gradient_left_top.xml  round_rec_gradient_right_top.xml  round_rec_light.xml  round_rec_light_deep.xml  round_rec_translucent.xml  setting.xml  share.xml  smaller.xml  stop.xml  switch_camera.xml  video.xml
app/src/main/res/layout/: activity_about.xml  activity_contact.xml  activity_drag_to_box.xml  activity_feedback.xml  activity_main.xml  activity_more_setting.xml  activity_play_video.xml  (+23 more)
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/res/values/: strings.xml
unity/: build.gradle
unity/src/main/: AndroidManifest.xml
unityLibrary/: build.gradle
unityLibrary/src/main/: AndroidManifest.xml
(+215 files in other folders)
